FreeST/test/Programs/InvalidTests/Typing/invalidParams/invalidParams.fst
-- It should have 2 params but it only has one
fun : Int -> Int -> Bool
fun x  = True
